projet_gl/src/test/deca/context/valid/0_01/0_01_Identifier_Int.deca
// Description:
//    Programme test si l'identifier est bien déclaré pour integer
//
// Resultats:
//
// Historique:
//    cree le 09/01/2024

{
        int a;
        int b;
        a = b;
}
