projet_gl/src/test/deca/context/invalid/0_01/0_01_Identifier.deca
// Description:
//    Programme test si l'identifier non déclaré est détecté
//
// Resultats:
//    Ligne 12: No definition for this identifier: b
// 
// Historique:
//    cree le 09/01/2024

{   
   int a;
   a = b;
}
